# Modular_robotic_vehicle_software

./: .gitignore  Doxyfile  README.md
Raspberry pi settings/: config.txt  setup_instructions.md
Raspberry pi settings/Raspberry pi tutorials/: YARP_instalation.md
Raspberry_Pi_settings/: raspi_temp.sh  setup_instructions.md
Raspberry_Pi_settings/Raspberry_Pi_tutorials/: commands.md  how to enable power button.txt
Raspberry_Pi_settings/setup_scripts/: morve_rosdep_keys.yaml  setup_rosdep.sh
Sonar/: CMakeLists.txt  HC_SR04.cpp  HC_SR04.h  main.cpp
TB6612FNG/: CMakeLists.txt  tb6612fng.cpp
src/: CMakeLists.txt  Setup.md
src/MRobot_rpi/: CMakeLists.txt
src/MRobot_rpi/Encoder/: CMakeLists.txt  Encoder.cpp  SpecializedEncoder.cpp  SpecializedEncoder.h
src/MRobot_rpi/MotorHat_Adafruit/: CMakeLists.txt  motor_hat.cpp  pca9685.cpp  pca9685.h  tb6612fng.cpp  tb6612fng.h  test_motor_hat.cpp
src/MRobot_rpi/Sonar/: main.cpp
src/MRobot_rpi/simple_tests/: CMakeLists.txt  test_encoder.cpp  test_motor_hat.cpp
src/MotorHat_Adafruit/: CMakeLists.txt  pca9685.cpp  pca9685.h  tb6612fng.cpp  test_motor_hat.cpp
src/Sonar/: CMakeLists.txt  HC_SR04.cpp
src/TB6612FNG/: CMakeLists.txt  main.cpp  tb6612fng.cpp  tb6612fng.h
src/drivers/: CMakeLists.txt
src/drivers/Encoder/: Encoder.h  SpecializedEncoder.cpp  SpecializedEncoder.h
src/drivers/MotorHat_Adafruit/: motor_hat.h
src/drivers/simple_tests/: test_encoder.cpp  test_tb6612fng.cpp
src/ros2_ws/src/battery_voltage/: CMakeLists.txt  package.xml
src/ros2_ws/src/battery_voltage/include/battery_voltage/: battery_voltage.hpp
src/ros2_ws/src/battery_voltage/src/: battery_voltage.cpp
src/ros2_ws/src/morve_description/: CMakeLists.txt  package.xml
src/ros2_ws/src/morve_description/description/meshes/: HC_SR04_2021_holder.stl  base_plate_with_holes.stl  motor310_left_holder.stl  motor310_right_holder.stl  raspberry_pi_holder.stl  sonar_holder.stl
src/ros2_ws/src/morve_description/description/rviz/: morve_view.rviz
src/ros2_ws/src/morve_description/description/urdf/: morve.urdf.xacro  morve_description.urdf.xacro
src/ros2_ws/src/morve_description/description/urdf/ros2_control/: morve.ros2_control.xacro
src/ros2_ws/src/morve_hardware_drivers/: CMakeLists.txt  package.xml
src/ros2_ws/src/morve_hardware_drivers/doc/: README.md
src/ros2_ws/src/morve_hardware_drivers/include/morve_hardware_drivers/: hardware_error.h
src/ros2_ws/src/morve_hardware_drivers/include/morve_hardware_drivers/Battery_Voltage/: minimal_ina219.hpp
src/ros2_ws/src/morve_hardware_drivers/include/morve_hardware_drivers/Encoder/: Encoder.h  SpecializedEncoder.h
src/ros2_ws/src/morve_hardware_drivers/include/morve_hardware_drivers/MotorHat_Adafruit/: motor_hat.h  pca9685.h  tb6612fng.h
src/ros2_ws/src/morve_hardware_drivers/include/morve_hardware_drivers/Sonar/: CMakeLists.txt  HC_SR04.h
src/ros2_ws/src/morve_hardware_drivers/src/Battery_Voltage/: minimal_ina219.cpp
src/ros2_ws/src/morve_hardware_drivers/src/Encoder/: Encoder.cpp  SpecializedEncoder.cpp
src/ros2_ws/src/morve_hardware_drivers/src/MotorHat_Adafruit/: motor_hat.cpp  pca9685.cpp  tb6612fng.cpp
src/ros2_ws/src/morve_hardware_drivers/src/Sonar/: HC_SR04.cpp
src/ros2_ws/src/morve_hardware_drivers/test/: test_encoder.cpp  test_minimal_ina219.cpp  test_motor_hat.cpp  test_sonar_timeout.cpp
src/ros2_ws/src/morve_hardware_interfaces/: CMakeLists.txt  morve_hardware_interfaces.xml  package.xml
src/ros2_ws/src/morve_hardware_interfaces/include/morve_hardware_interfaces/: motor_interface.hpp  parsing_functions.hpp
src/ros2_ws/src/morve_hardware_interfaces/src/: motor_interface.cpp  parsing_functions.cpp  test_stoi_hex.cpp
src/ros2_ws/src/morve_interfaces/: CMakeLists.txt  package.xml
src/ros2_ws/src/morve_interfaces/msg/: BatteryStatus.msg
src/ros2_ws/src/morve_launch/: CMakeLists.txt  package.xml
src/ros2_ws/src/morve_launch/config/: morve_controllers.yaml  morve_dead_zone_controllers.yaml  morve_only_velocity_controllers.yaml  sonar_params.yaml
src/ros2_ws/src/morve_launch/description/: morve.ros2_control.xacro  morve.urdf.xacro
src/ros2_ws/src/morve_launch/description/urdf/: morve_description.urdf.xacro
src/ros2_ws/src/morve_launch/doc/: instructions.md
src/ros2_ws/src/morve_launch/launch/: morve.launch.py  morve_one_wheel_setup.launch.py  morve_view.launch.py
src/ros2_ws/src/morve_launch/launch/cli_gui/: teleop_twist_keyboard.launch.py
src/ros2_ws/src/morve_launch/launch/hardware/: battery_node.launch.py  sonar_nodes.launch.py
src/ros2_ws/src/morve_launch/launch/inspection/: plotjuggler.launch.py
src/ros2_ws/src/pwm_pid_controller/: CMakeLists.txt  package.xml  pwm_pid_controller.xml
src/ros2_ws/src/pwm_pid_controller/include/pwm_pid_controller/: pid_regulator.hpp  pwm_pid_controller.hpp
src/ros2_ws/src/pwm_pid_controller/src/: pid_regulator.cpp  pwm_pid_controller.cpp  pwm_pid_controller.yaml
src/ros2_ws/src/sonar_distance/: CMakeLists.txt  package.xml
src/ros2_ws/src/sonar_distance/include/sonar_distance/: sonar_node.hpp
src/ros2_ws/src/sonar_distance/src/: sonar_node.cpp  sonar_node_parameters.yaml
src/ros2_ws/src/wheels_interface/: CMakeLists.txt  package.xml
src/scripts/: manage_service.sh
