<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>battery_voltage</name>
  <version>0.0.0</version>
  <description>Node which publishes battery voltage to topic /voltage with message format ...</description>
  <maintainer email="gitjaneckar@seznam.cz">Radek JaneÄka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>morve_interfaces</depend>
  <depend>morve_hardware_drivers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
