<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pwm_pid_controller</name>
  <version>0.0.0</version>
  <description>Specialized PID controller for controlling system with zone in the middle where te system is not making any changes so sets default value and waits if anything will move.</description>
  <maintainer email="gitjaneckar@seznam.cz">Radek Janečka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
